force-app/main/default/objects/SVMXC__PM_Schedule_Definition__c/SVMXC__PM_Schedule_Definition__c.object-meta.xml
<CustomObject>
    <description>Time based schedules for PM Plan are defined here.</description>
    <label>PM Schedule Definition</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Schedule Definition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>