force-app/main/default/objects/SVMXC__PM_Schedule_Definition__c/fields/SVMXC__Frequency__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Frequency__c</fullName>
    <label>Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>