force-app/main/default/objects/SVMXC__PM_Schedule_Definition__c/fields/SVMXC__Processed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>