force-app/main/default/objects/SVMXC__PM_Schedule_Definition__c/fields/SVMXC__SM_Adjusted_Value__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Adjusted_Value__c</fullName>
    <description>Value by which PM schedules are adjusted</description>
    <inlineHelpText>Value by which PM schedules are adjusted</inlineHelpText>
    <label>Adjusted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>