force-app/main/default/objects/SVMXC__PM_Schedule_Definition__c/fields/SVMXC__SM_Operator__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Operator__c</fullName>
    <description>Operator used in Condition rules</description>
    <inlineHelpText>Operator used in Condition rules</inlineHelpText>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>