force-app/main/default/objects/SVMXC__PM_Schedule_Definition__c/fields/SVMXC__SM_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Sequence__c</fullName>
    <description>Sequence number of PM schedule</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>