force-app/main/default/objects/SVMXC__PM_Schedule_Definition__c/fields/SVMXC__Work_Order_Purpose__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Work_Order_Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Purpose</label>
    <referenceTo>SVMXC__Task_Template__c</referenceTo>
    <relationshipLabel>PM Schedule Definition</relationshipLabel>
    <relationshipName>PM_Schedule_Definition</relationshipName>
    <type>Lookup</type>
</CustomField>